tests/fixtures/errors/invalid_include_many_url.puml
@startuml
!include_many https://example.com/many.puml
@enduml
